# tokenlens

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DB_SCHEMA.md  QA_REFERENCE.md  README.md  architecture-visual.html  mkdocs.yml  tokenlens-api.postman_collection.json
docs/docs/: api.md  changelog.md  cli.md  configuration.md  contributing.md  dashboard.md  getting-started.md  index.md  installation.md  ml.md
docs/docs/adapters/: claude-code.md  developing.md  kiro.md
specs/tokenlens-platform/: .config.kiro  design.md  requirements.md  tasks.md
src/tokenlens/: __init__.py
src/tokenlens/adapters/: __init__.py  base.py  claude_code.py  registry.py
src/tokenlens/agent/: __init__.py  daemon.py  pipeline.py  session.py  watcher.py
src/tokenlens/alerts/: __init__.py  desktop.py  engine.py  webhooks.py
src/tokenlens/api/: __init__.py  app.py  deps.py  middleware.py  schemas.py  websocket.py
src/tokenlens/api/routes/: __init__.py  analytics.py  anomalies.py  efficiency.py  events.py  export.py  predictions.py  sessions.py  settings.py  status.py
src/tokenlens/cli/: __init__.py  live.py  main.py
src/tokenlens/cli/commands/: __init__.py  agent.py  compare.py  data.py  export.py  init.py  mcp.py  ml.py  optimize.py  predict.py  report.py  serve.py  (+3 more)
src/tokenlens/core/: __init__.py  config.py  database.py  models.py  pricing.py  schema.py  session_window.py  utils.py
src/tokenlens/integrations/: __init__.py  kiro.py  kiro_hook_template.json  mcp_server.py
src/tokenlens/ml/: __init__.py  anomaly.py  base.py  budget.py  efficiency.py  forecaster.py  profiler.py  scheduler.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_analytics.py  test_api_endpoints.py  test_api_status.py  test_database.py  test_websocket.py
tests/property/: test_adapter_properties.py  test_claude_code_properties.py  test_efficiency_properties.py  test_pricing_properties.py  test_schema_properties.py  test_schema_validation.py  test_session_properties.py
tests/unit/: test_api_middleware.py  test_cli.py  test_cli_phase5.py  test_config.py  test_daemon.py  test_forecaster.py  test_mcp_server.py  test_ml_base.py  test_ml_modules.py  test_models.py  test_pipeline.py  test_watcher.py
ui/: README.md  package-lock.json  package.json  prototype.html  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: Layout.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
ui/src/hooks/: useWebSocket.test.ts  useWebSocket.ts
ui/src/lib/: api.ts  dateUtils.ts
ui/src/pages/: AnalyticsPage.tsx  HomePage.tsx  HowItWorksPage.tsx  InsightsPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
ui/src/stores/: useMLStore.ts  useSettingsStore.ts  useTokenStore.test.ts  useTokenStore.ts
ui/src/test/: setup.ts
(+29 files in other folders)
