[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenlens"
version = "1.0.0"
description = "Universal AI token monitoring and prediction platform for coding tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Mukul Singh" },
]
keywords = ["ai", "tokens", "monitoring", "claude", "kiro", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "structlog>=24",
    "pydantic>=2.5",
    "dynaconf>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "watchdog>=4",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "pandas>=2",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "joblib>=1.3",
    "statsmodels>=0.14",
    "mcp>=1.0",
]
ml-prophet = [
    "tokenlens[ml]",
    "prophet>=1.1",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "plyer>=2.1",
]
tui = [
    "textual>=0.70",
]
ui = []
all = [
    "tokenlens[ml-prophet,api,tui]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "factory-boy>=3.3",
    "hypothesis>=6.152.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3",
]

[project.scripts]
tokenlens = "tokenlens.cli.main:app"

[project.urls]
Homepage = "https://github.com/tokenlens/tokenlens"
Documentation = "https://tokenlens.github.io/tokenlens/"
Repository = "https://github.com/tokenlens/tokenlens"
Issues = "https://github.com/tokenlens/tokenlens/issues"
Changelog = "https://github.com/tokenlens/tokenlens/blob/main/CHANGELOG.md"

[project.entry-points."tokenlens.adapters"]
claude_code = "tokenlens.adapters.claude_code:ClaudeCodeAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/tokenlens/api/**" = ["B008", "TCH", "TC002", "TC003", "A002", "F823"]
"src/tokenlens/cli/**" = ["B008", "TCH", "TC002", "TC003", "A002", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["tokenlens"]
